--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
 body {
-  background-color: #F9FAFC;
+  background-color: #EFFBFB;
 }
 
 .container {
   padding-top: 7.5rem;
 }
 
-.converted-value {
-  color: #452B4E;
-}
-
-.conversion-precision {
-  color: #452B4E;
+#logo{
+  padding-top: 8rem;
+  padding-bottom: 2rem;
+  margin: auto;
+  width: 25.5rem;
 }
